fix: balancer should directly wrap text or inline nodes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-gradient-to-tr from-[#2a2a2a] via-[#181818] to-[#262727] font-default text-foreground;
+    @apply bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))]  from-[#2a2a2a] via-[#181818] to-[#262727] font-default text-foreground;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
